data/derived/fa15/progs/unify/prog0572.ml.out
Characters 49-65:
  wwhile ((let g x = (f b) in (f b, (f b) = b)), b);;
                              ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
